welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:3: error: '(' expected but identifier found.
		if bOk return true 
                   ^inOrder:5: error: illegal start of simple expression
	}
        ^